[gd_scene load_steps=5 format=3 uid="uid://du1jd3da6icf3"]

[ext_resource type="Script" path="res://scripts/letter_item.gd" id="1_5h443"]
[ext_resource type="FontFile" uid="uid://cr5xqdjcwmv8o" path="res://PixelOperator8.ttf" id="2_libma"]
[ext_resource type="AudioStream" uid="uid://14b5hg7uxgah" path="res://sounds/collect.wav" id="3_b81vy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkoho"]
size = Vector2(7, 10.75)

[node name="Letter Item" type="Area2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_5h443")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_rkoho")

[node name="LetterLabel" type="Label" parent="."]
z_index = 1
offset_left = -14.0
offset_top = -22.0
offset_right = 5.0
offset_bottom = 2.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_libma")
text = "A"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CollectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_b81vy")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
